<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.AddEditNoteFragment">


    <EditText
        android:id="@+id/editTextNoteTitle"
        style="@style/Widget.Material3.TextInputEditText.FilledBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:hint="@string/editTextNoteEnterTitleHint"
        android:inputType="text"
        android:maxLines="1"
        android:singleLine="true"
        android:textColorHint="#78909C"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextNoteContent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextNoteContent"
        style="@style/Widget.Material3.TextInputEditText.FilledBox"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="start|top"
        android:hint="@string/editTextNoteEnterContentHint"
        android:inputType="textMultiLine"
        android:singleLine="false"
        android:textAlignment="textStart"
        android:textColorHint="#757575"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNoteTitle" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/saveNoteButton"
        style="@style/Widget.Material3.FloatingActionButton.Tertiary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:clickable="true"
        android:contentDescription="@string/save_note_content_description"
        android:src="@android:drawable/ic_menu_save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>